# ark-circom-tc

./: Cargo.toml  README.md
circuits/: Makefile  input.json  merkleTree.circom  withdraw.circom  withdraw.sym  witness.wtns
circuits/withdraw_js/: withdraw.wasm
src/: main.rs
test/: index.js  package.json
