[package]
name = "ark-circom-tc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_json = "1.0.48"
thiserror = { version = "1.0.23" }
num-bigint = { version = "0.4", default-features = false,  features = ["rand"]}
num-traits = { version = "0.2.0", default-features = false }

rand = "0.8.4"
webb-pedersen-hash = "0.1.0"
# ethers = { git = "https://github.com/gakonst/ethers-rs" }
# ark-circom = { git = "https://github.com/oskarth/ark-circom", features = ["circom-2"], branch = "circom-2-support" }

generic-array = "0.14.5"
# ark-circom = { git = "https://github.com/gakonst/ark-circom.git", features = ["circom-2"] }
ark-circom = { git = "https://github.com/philsippl/ark-circom.git", features = ["circom-2"] }
# ark-circom = { path = "./lib/ark-circom", features = ["circom-2"] }
ark-bn254 = { version = "0.3.0" }
ark-std = { version = "0.3.0", default-features = false, features = ["parallel"] }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "765817f", features = ["parallel"] }
